fix table incomplete display problem on mobile device

--- a/src/scss/Result.scss
+++ b/src/scss/Result.scss
@@ -89,7 +89,7 @@ tbody tr {
     display: flex;
     padding: 0;
     float: right;
-    margin: 0 8px 8px 0;
+    margin-bottom: 8px;
 
     li {
       &:hover {
@@ -136,12 +136,12 @@ tbody tr {
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 400px) {
   tbody tr td {
-    padding: 20px 10px;
+    padding: 20px 9px;
   }
 
   table.table thead th {
-    padding: 20px 10px;
+    padding: 20px 9px;
   }
 }
